objects/Shipper__x.object
<CustomObject>
    <externalDataSource>awsDynamodbXds</externalDataSource>
    <externalName>northwind</externalName>
    <fields>
        <fullName>Phone__c</fullName>
        <externalDeveloperName>data</externalDeveloperName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Shipper_ID__c</fullName>
        <externalDeveloperName>shipper</externalDeveloperName>
        <label>Shipper ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipper_Name__c</fullName>
        <externalDeveloperName>sk</externalDeveloperName>
        <label>Shipper Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Shipper</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Shipper_Name__c</columns>
        <columns>Shipper_ID__c</columns>
        <columns>Phone__c</columns>
        <columns>ExternalId</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>Shippers</pluralLabel>
</CustomObject>